--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.class
+*.iml
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+.idea/
 
 # Package Files #
 *.jar
@@ -10,3 +12,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+lib/
+target/
+/.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+/.idea/libraries/Maven__junit_junit_4_12.xml
